# Cushion

./: CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: verify.yml
.gitlab/: ci.yml
executable/: CMakeLists.txt  main.c
test/: CMakeLists.txt  cushion_common.pm  sanitize_expectations  test_launcher
test/expectation/: combined_features.c  combined_features.depfile  comments_trivial.c  comments_trivial.depfile  conditional_inclusion_defined.c  conditional_inclusion_defined.depfile  conditional_inclusion_evaluate_integer.c  conditional_inclusion_evaluate_integer.depfile  conditional_inclusion_evaluate_macro.c  conditional_inclusion_evaluate_macro.depfile  conditional_inclusion_preserve.c  conditional_inclusion_preserve.depfile  conditional_inclusion_trivial.c  conditional_inclusion_trivial.depfile  custom_line_directive.c  custom_line_directive.depfile  defer_goto.c  defer_goto.depfile  defer_loop.c  defer_loop.depfile  defer_scope.c  defer_scope.depfile  defer_switch.c  defer_switch.depfile  evaluated_argument_trivial.c  evaluated_argument_trivial.depfile  evaluated_argument_variadic.c  evaluated_argument_variadic.depfile  include_local.c  include_local.depfile  include_pragma_once.c  include_pragma_once.depfile  include_recursive.c  include_recursive.depfile  include_scan_only.c  include_scan_only.depfile  include_trivial.c  include_trivial.depfile  macro_command_line.c  macro_command_line.depfile  (+32 more)
test/include/include_full/: recursive_level_1.h  recursive_level_2.h  recursive_level_3.h
test/include_scan_only/include_scan_only/: recursive_level_1.h  recursive_level_2.h  recursive_level_3.h
test/source/: combined_features.c  comments_trivial.c  conditional_inclusion_defined.c  conditional_inclusion_evaluate_integer.c  conditional_inclusion_evaluate_macro.c  conditional_inclusion_preserve.c  conditional_inclusion_trivial.c  custom_line_directive.c  defer_goto.c  defer_loop.c  defer_scope.c  defer_switch.c  evaluated_argument_trivial.c  evaluated_argument_variadic.c  include_local.c  include_local.h  include_pragma_once.c  include_recursive.c  include_scan_only.c  include_trivial.c  macro_command_line.c  macro_concatenate.c  macro_preserve.c  macro_stringize.c  macro_trivial.c  macro_undef.c  macro_variadic.c  macro_wrapper.c  multiple_input.c  multiple_input_append_1.c  multiple_input_append_2.c  multiple_input_append_3.c  pragma_trivial.c  snippet_trivial.c  statement_accumulator_combine_files.c  statement_accumulator_combine_files.h  statement_accumulator_macro.c  statement_accumulator_optional.c  statement_accumulator_trivial.c  statement_accumulator_unique.c  (+1 more)
